# pdf-craft-webui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
static/: index.html
